use AAPullToRefresh by CocoaPods

--- a/MyOne3/Podfile
+++ b/MyOne3/Podfile
@@ -11,6 +11,7 @@ pod 'UITableView+FDTemplateLayoutCell'
 pod 'SDCycleScrollView'
 pod 'TPKeyboardAvoiding'
 pod 'MJRefresh'
+pod 'AAPullToRefresh'
 pod 'KMNavigationBarTransition'
 pod 'CocoaLumberjack'
 pod 'SwipeView'
