--- a/MyOne3/Podfile
+++ b/MyOne3/Podfile
@@ -2,25 +2,25 @@ inhibit_all_warnings!
 
 platform :ios, '8.0'
 
-pod 'AFNetworking'
-pod 'SDWebImage'
-pod 'Masonry'
-pod 'Mantle'
-pod 'MBProgressHUD'
-pod 'UITableView+FDTemplateLayoutCell'
-pod 'SDCycleScrollView'
-pod 'TPKeyboardAvoiding'
-pod 'MJRefresh'
-pod 'KMNavigationBarTransition'
-pod 'CocoaLumberjack'
-pod 'SwipeView'
-pod 'YLGIFImage'
-pod 'GMCPagingScrollView'
-pod 'YYText'
-pod 'YYImage'
-pod 'pop'
-pod 'JTSImageViewController'
-pod 'NYTPhotoViewer'
-pod 'VGParallaxHeader'
+pod 'AFNetworking', '~> 3.0.4'
+pod 'SDWebImage', '~> 3.7.5'
+pod 'Masonry', '~> 0.6.4'
+pod 'Mantle', '~> 2.0.6'
+pod 'MBProgressHUD', '~> 1.0.0'
+pod 'UITableView+FDTemplateLayoutCell', '~> 1.4'
+pod 'SDCycleScrollView', '~> 1.61'
+pod 'TPKeyboardAvoiding', '~> 1.2.11'
+pod 'MJRefresh', '~> 3.1.0'
+pod 'KMNavigationBarTransition', '~> 0.0.4'
+pod 'CocoaLumberjack', '~> 2.2.0'
+pod 'SwipeView', '~> 1.3.2'
+pod 'YLGIFImage', '~> 0.11'
+pod 'GMCPagingScrollView', '~> 1.0.3'
+pod 'YYText', '~> 0.9.19'
+pod 'YYImage', '~> 0.9.3'
+pod 'pop', '~> 1.0.9'
+pod 'JTSImageViewController', '~> 1.5.1'
+pod 'NYTPhotoViewer', '~> 1.1.0'
+pod 'VGParallaxHeader', '~> 0.0.6'
 pod 'ZYCornerRadius', '~> 0.8.1'
-pod 'DZNEmptyDataSet'
+pod 'DZNEmptyDataSet', '~> 1.7.3'
