参照官方3.3版修改阅读详情

--- a/MyOne3/Podfile
+++ b/MyOne3/Podfile
@@ -24,3 +24,4 @@ pod 'NYTPhotoViewer', '~> 1.1.0'
 pod 'VGParallaxHeader', '~> 0.0.6'
 pod 'ZYCornerRadius', '~> 0.8.1'
 pod 'DZNEmptyDataSet', '~> 1.7.3'
+pod 'MLeaksFinder', '~> 0.2.0'
